--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.3'
 
 services:
 
-  # Postgresql 11 DB
+  # Postgresql 11 shared DB
   PostgreSQL:
     environment:
       - POSTGRES_DB=${DATABASE_NAME}
@@ -35,7 +35,7 @@ services:
         DATABASE_URL: "jdbc:postgresql://PostgreSQL:${DATABASE_PORT}/${DATABASE_NAME}"
         DATABASE_USERNAME: "${DATABASE_USERNAME}"
         DATABASE_PASSWORD: "${DATABASE_PASSWORD}"
-        FLYWAY_SCHEMA: "flyway"
+        FLYWAY_SCHEMA: "flyway_platform"
         FLYWAY_SCRIPTS_DIR: "postgres"
     env_file: .env
     ports:
@@ -46,7 +46,6 @@ services:
     container_name: "odm-metaservice"
     depends_on:
       - PostgreSQL
-      - platform
     build:
       context: odm-platform-up-services-meta-blindata/
       args:
@@ -57,6 +56,7 @@ services:
         DATABASE_URL: "jdbc:postgresql://PostgreSQL:${DATABASE_PORT}/${DATABASE_NAME}"
         DATABASE_USERNAME: "${DATABASE_USERNAME}"
         DATABASE_PASSWORD: "${DATABASE_PASSWORD}"
+        FLYWAY_SCHEMA: "flyway_metaservice"
         FLYWAY_SCRIPTS_DIR: "postgres"
     env_file: .env
     ports:
