--- a/odm-platform-up-services-meta-blindata/Dockerfile
+++ b/odm-platform-up-services-meta-blindata/Dockerfile
@@ -1,18 +1,24 @@
-# Stage 1
+# Stage 1: build Registry Client
 FROM maven:3-openjdk-11-slim as build
 
 WORKDIR /workspace/app
 
+# Clone Platform project and build it (the client module is a dependency for this project)
 RUN apt-get update
 RUN apt-get -y install git
+RUN git clone https://github.com/opendatamesh-initiative/odm-platform-pp-services.git
+
+WORKDIR /workspace/app/odm-platform-pp-services
+
+RUN mvn clean install -DskipTests
+
+WORKDIR /workspace/app
+
 RUN git clone --branch blindata-develop-docker https://github.com/opendatamesh-initiative/odm-platform-up-services-meta-blindata.git
 
 WORKDIR /workspace/app/odm-platform-up-services-meta-blindata
-RUN ls
 
-ARG SPRING_PROFILES_ACTIVE_BUILD=dev
 ARG SPRING_PORT=8595
-ARG JAVA_OPTS
 ARG DATABASE_URL
 ARG DATABASE_USERNAME
 ARG DATABASE_PASSWORD
@@ -20,8 +26,6 @@ ARG FLYWAY_SCHEMA=flyway
 ARG FLYWAY_SCRIPTS_DIR=postgres
 ARG H2_CONSOLE_ENABLED=false
 ARG H2_CONSOLE_PATH=h2-console
-ENV SPRING_PROFILES_ACTIVE ${SPRING_PROFILES_ACTIVE_BUILD}
-ENV SPRING_PROFILES_ACTIVE_BUILD ${SPRING_PROFILES_ACTIVE_BUILD}
 ENV SPRING_PORT ${SPRING_PORT}
 ENV DATABASE_URL ${DATABASE_URL}
 ENV DATABASE_USERNAME ${DATABASE_USERNAME}
@@ -31,9 +35,10 @@ ENV FLYWAY_SCRIPTS_DIR ${FLYWAY_SCRIPTS_DIR}
 ENV H2_CONSOLE_ENABLED ${H2_CONSOLE_ENABLED}
 ENV H2_CONSOLE_PATH ${H2_CONSOLE_PATH}
 
-RUN mvn clean install -DskipTests -Dactive.profile=$SPRING_PROFILES_ACTIVE_BUILD
+RUN mvn clean install -DskipTests
 
-# Stage 2
+
+# Stage 3: App executable
 FROM openjdk:11-jre-slim
 
 RUN apt-get update && apt-get install -y wget gpg lsb-release zip curl
@@ -44,8 +49,8 @@ ARG JAVA_OPTS
 ARG DATABASE_URL
 ARG DATABASE_USERNAME
 ARG DATABASE_PASSWORD
-ARG FLYWAY_SCHEMA=flyway
-ARG FLYWAY_SCRIPTS_DIR=mysql
+ARG FLYWAY_SCHEMA=flyway_metaservice
+ARG FLYWAY_SCRIPTS_DIR=postgres
 ARG H2_CONSOLE_ENABLED=false
 ARG H2_CONSOLE_PATH=h2-console
 ENV SPRING_PROFILES_ACTIVE ${SPRING_PROFILES_ACTIVE}
@@ -59,7 +64,7 @@ ENV FLYWAY_SCRIPTS_DIR ${FLYWAY_SCRIPTS_DIR}
 ENV H2_CONSOLE_ENABLED ${H2_CONSOLE_ENABLED}
 ENV H2_CONSOLE_PATH ${H2_CONSOLE_PATH}
 
-COPY --from=build  /workspace/app/odm-platform-up-services-meta-blindata/meta-service-server/target/odm-platform-up-services-meta-blindata-*.jar /app/
+COPY --from=build  /workspace/app/odm-platform-up-services-meta-blindata/meta-service-server/target/odm-platform-up-meta-service-server-*.jar /app/
 
 RUN ln -s -f /usr/share/zoneinfo/Europe/Rome /etc/localtime
 
