--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     ports:
       - "${DATABASE_PORT}:5432"
     volumes:
-      - postgres:/var/lib/postgresql/data:rw
+      - postgres:/var/lib/postgresql/${DATABASE_NAME}/data:rw
     healthcheck:
       test: [ "CMD", "pg_isready -U postgres" ]
       interval: 3s
