--- a/odm-platform-pp-services/Dockerfile
+++ b/odm-platform-pp-services/Dockerfile
@@ -19,9 +19,12 @@ ARG FLYWAY_SCHEMA=flyway
 ARG FLYWAY_SCRIPTS_DIR=postgres
 ARG H2_CONSOLE_ENABLED=false
 ARG H2_CONSOLE_PATH=h2-console
+ARG SKIP_METASERVICE=true
+ARG METASERVICE_HOSTNAME=localhost
+ARG METASERVICE_PORT=8595
 ENV SPRING_PROFILES_ACTIVE ${SPRING_PROFILES_ACTIVE_BUILD}
 ENV SPRING_PROFILES_ACTIVE_BUILD ${SPRING_PROFILES_ACTIVE_BUILD}
-ENV SPRING_PORT ${SPRING_PORT}
+ENV SPRING_PORT ${PLATFORM_SPRING_PORT}
 ENV DATABASE_URL ${DATABASE_URL}
 ENV DATABASE_USERNAME ${DATABASE_USERNAME}
 ENV DATABASE_PASSWORD ${DATABASE_PASSWORD}
@@ -29,6 +32,9 @@ ENV FLYWAY_SCHEMA ${FLYWAY_SCHEMA}
 ENV FLYWAY_SCRIPTS_DIR ${FLYWAY_SCRIPTS_DIR}
 ENV H2_CONSOLE_ENABLED ${H2_CONSOLE_ENABLED}
 ENV H2_CONSOLE_PATH ${H2_CONSOLE_PATH}
+ENV SKIP_METASERVICE ${SKIP_METASERVICE}
+ENV METASERVICE_HOSTNAME ${METASERVICE_HOSTNAME}
+ENV METASERVICE_PORT ${METASERVICE_PORT}
 
 RUN mvn clean install -DskipTests -Dactive.profile=$SPRING_PROFILES_ACTIVE_BUILD
 
@@ -47,8 +53,11 @@ ARG FLYWAY_SCHEMA=flyway_platform
 ARG FLYWAY_SCRIPTS_DIR=postgres
 ARG H2_CONSOLE_ENABLED=false
 ARG H2_CONSOLE_PATH=h2-console
+ARG SKIP_METASERVICE=true
+ARG METASERVICE_HOSTNAME=localhost
+ARG METASERVICE_PORT=8595
 ENV SPRING_PROFILES_ACTIVE ${SPRING_PROFILES_ACTIVE}
-ENV SPRING_PORT ${SPRING_PORT}
+ENV SPRING_PORT ${PLATFORM_SPRING_PORT}
 ENV JAVA_OPTS ${JAVA_OPTS}
 ENV DATABASE_URL ${DATABASE_URL}
 ENV DATABASE_USERNAME ${DATABASE_USERNAME}
@@ -57,6 +66,9 @@ ENV FLYWAY_SCHEMA ${FLYWAY_SCHEMA}
 ENV FLYWAY_SCRIPTS_DIR ${FLYWAY_SCRIPTS_DIR}
 ENV H2_CONSOLE_ENABLED ${H2_CONSOLE_ENABLED}
 ENV H2_CONSOLE_PATH ${H2_CONSOLE_PATH}
+ENV SKIP_METASERVICE ${SKIP_METASERVICE}
+ENV METASERVICE_HOSTNAME ${METASERVICE_HOSTNAME}
+ENV METASERVICE_PORT ${METASERVICE_PORT}
 
 COPY --from=build  /workspace/app/odm-platform-pp-services/registry-server/target/odm-platform-pp-*.jar /app/
 
@@ -64,4 +76,4 @@ RUN ln -s -f /usr/share/zoneinfo/Europe/Rome /etc/localtime
 
 CMD java $JAVA_OPTS -jar /app/odm-platform-pp-registry-server*.jar --spring.profiles.active=$SPRING_PROFILES_ACTIVE
 
-EXPOSE $SPRING_PORT
+EXPOSE $PLATFORM_SPRING_PORT
