--- a/odm-platform-pp-services/Dockerfile
+++ b/odm-platform-pp-services/Dockerfile
@@ -24,7 +24,7 @@ ARG METASERVICE_HOSTNAME=localhost
 ARG METASERVICE_PORT=8595
 ENV SPRING_PROFILES_ACTIVE ${SPRING_PROFILES_ACTIVE_BUILD}
 ENV SPRING_PROFILES_ACTIVE_BUILD ${SPRING_PROFILES_ACTIVE_BUILD}
-ENV SPRING_PORT ${PLATFORM_SPRING_PORT}
+ENV SPRING_PORT ${SPRING_PORT}
 ENV DATABASE_URL ${DATABASE_URL}
 ENV DATABASE_USERNAME ${DATABASE_USERNAME}
 ENV DATABASE_PASSWORD ${DATABASE_PASSWORD}
@@ -57,7 +57,7 @@ ARG SKIP_METASERVICE=true
 ARG METASERVICE_HOSTNAME=localhost
 ARG METASERVICE_PORT=8595
 ENV SPRING_PROFILES_ACTIVE ${SPRING_PROFILES_ACTIVE}
-ENV SPRING_PORT ${PLATFORM_SPRING_PORT}
+ENV SPRING_PORT ${SPRING_PORT}
 ENV JAVA_OPTS ${JAVA_OPTS}
 ENV DATABASE_URL ${DATABASE_URL}
 ENV DATABASE_USERNAME ${DATABASE_USERNAME}
@@ -76,4 +76,4 @@ RUN ln -s -f /usr/share/zoneinfo/Europe/Rome /etc/localtime
 
 CMD java $JAVA_OPTS -jar /app/odm-platform-pp-registry-server*.jar --spring.profiles.active=$SPRING_PROFILES_ACTIVE
 
-EXPOSE $PLATFORM_SPRING_PORT
+EXPOSE $SPRING_PORT
