--- a/odm-platform-up-services-meta-blindata/Dockerfile
+++ b/odm-platform-up-services-meta-blindata/Dockerfile
@@ -26,6 +26,11 @@ ARG FLYWAY_SCHEMA=flyway
 ARG FLYWAY_SCRIPTS_DIR=postgres
 ARG H2_CONSOLE_ENABLED=false
 ARG H2_CONSOLE_PATH=h2-console
+ARG BLINDATA_URL
+ARG BLINDATA_USER
+ARG BLINDATA_PWD
+ARG BLINDATA_TENANT
+ARG BLINDATA_ROLE
 ENV SPRING_PORT ${SPRING_PORT}
 ENV DATABASE_URL ${DATABASE_URL}
 ENV DATABASE_USERNAME ${DATABASE_USERNAME}
@@ -34,6 +39,11 @@ ENV FLYWAY_SCHEMA ${FLYWAY_SCHEMA}
 ENV FLYWAY_SCRIPTS_DIR ${FLYWAY_SCRIPTS_DIR}
 ENV H2_CONSOLE_ENABLED ${H2_CONSOLE_ENABLED}
 ENV H2_CONSOLE_PATH ${H2_CONSOLE_PATH}
+ENV BLINDATA_URL ${BLINDATA_URL}
+ENV BLINDATA_USER ${BLINDATA_USER}
+ENV BLINDATA_PWD ${BLINDATA_PWD}
+ENV BLINDATA_TENANT ${BLINDATA_TENANT}
+ENV BLINDATA_ROLE ${BLINDATA_ROLE}
 
 RUN mvn clean install -DskipTests
 
@@ -53,6 +63,11 @@ ARG FLYWAY_SCHEMA=flyway_metaservice
 ARG FLYWAY_SCRIPTS_DIR=postgres
 ARG H2_CONSOLE_ENABLED=false
 ARG H2_CONSOLE_PATH=h2-console
+ARG BLINDATA_URL
+ARG BLINDATA_USER
+ARG BLINDATA_PWD
+ARG BLINDATA_TENANT
+ARG BLINDATA_ROLE
 ENV SPRING_PROFILES_ACTIVE ${SPRING_PROFILES_ACTIVE}
 ENV SPRING_PORT ${SPRING_PORT}
 ENV JAVA_OPTS ${JAVA_OPTS}
@@ -63,6 +78,11 @@ ENV FLYWAY_SCHEMA ${FLYWAY_SCHEMA}
 ENV FLYWAY_SCRIPTS_DIR ${FLYWAY_SCRIPTS_DIR}
 ENV H2_CONSOLE_ENABLED ${H2_CONSOLE_ENABLED}
 ENV H2_CONSOLE_PATH ${H2_CONSOLE_PATH}
+ENV BLINDATA_URL ${BLINDATA_URL}
+ENV BLINDATA_USER ${BLINDATA_USER}
+ENV BLINDATA_PWD ${BLINDATA_PWD}
+ENV BLINDATA_TENANT ${BLINDATA_TENANT}
+ENV BLINDATA_ROLE ${BLINDATA_ROLE}
 
 COPY --from=build  /workspace/app/odm-platform-up-services-meta-blindata/meta-service-server/target/odm-platform-up-meta-service-server-*.jar /app/
 
