--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,13 @@ services:
       - POSTGRES_DB=${DATABASE_NAME}
       - POSTGRES_PASSWORD=${DATABASE_PASSWORD}
       - POSTGRES_USER=${DATABASE_USERNAME}
+      - PGPORT=${DATABASE_PORT}
     image: postgres:11-alpine
     env_file: .env
     ports:
-      - "${DATABASE_PORT}:5432"
+      - "${DATABASE_PORT}:${DATABASE_PORT}"
+    #expose:
+    #  - "${DATABASE_PORT}"
     volumes:
       - postgres:/var/lib/postgresql/${DATABASE_NAME}/data:rw
     healthcheck:
