--- a/odm-platform-up-services-meta-blindata/Dockerfile
+++ b/odm-platform-up-services-meta-blindata/Dockerfile
@@ -5,7 +5,8 @@ WORKDIR /workspace/app
 
 # Clone Platform project and build it (the client module is a dependency for this project)
 RUN apt-get update
-RUN apt-get -y install git
+RUN apt-get -y install git npm
+RUN npm i -g redoc-cli
 RUN git clone https://github.com/opendatamesh-initiative/odm-platform-pp-services.git
 
 WORKDIR /workspace/app/odm-platform-pp-services
@@ -18,8 +19,7 @@ RUN git clone https://github.com/opendatamesh-initiative/odm-platform-up-service
 
 WORKDIR /workspace/app/odm-platform-up-services-meta-blindata
 
-#RUN mvn clean install -DskipTests
-RUN mvn package spring-boot:repackage
+RUN mvn clean package spring-boot:repackage
 
 # Stage 2: App executable
 FROM openjdk:11-jre-slim
