--- a/odm-platform-pp-services/Dockerfile
+++ b/odm-platform-pp-services/Dockerfile
@@ -4,9 +4,8 @@ FROM maven:3-openjdk-11-slim as build
 WORKDIR /workspace/app
 
 RUN apt-get update
-RUN apt-get -y install git npm
-RUN npm i -g redoc-cli
-RUN git clone https://github.com/opendatamesh-initiative/odm-platform-pp-services.git
+RUN apt-get -y install git
+RUN git https://github.com/opendatamesh-initiative/odm-platform.git
 
 WORKDIR /workspace/app/odm-platform-pp-services
 
@@ -23,16 +22,16 @@ ARG JAVA_OPTS
 ARG DATABASE_URL
 ARG DATABASE_USERNAME
 ARG DATABASE_PASSWORD
-ARG FLYWAY_SCHEMA=flyway
-ARG FLYWAY_SCRIPTS_DIR=mysql
+ARG FLYWAY_SCHEMA=ODMREGISTRY
+ARG FLYWAY_SCRIPTS_DIR=postgresql
 ARG H2_CONSOLE_ENABLED=false
 ARG H2_CONSOLE_PATH=h2-console
-ARG SKIP_METASERVICE=true
-ARG METASERVICE_HOSTNAME=localhost
-ARG METASERVICE_PORT=8595
-ARG SKIP_POLICYSERVICE=true
-ARG POLICYSERVICE_HOSTNAME=localhost
-ARG POLICYSERVICE_PORT=4242
+ARG SKIP_METASERVICE=false
+ARG METASERVICE_HOSTNAME
+ARG METASERVICE_PORT
+ARG SKIP_POLICYSERVICE=false
+ARG POLICYSERVICE_HOSTNAME
+ARG POLICYSERVICE_PORT
 
 ENV SPRING_PROFILES_ACTIVE ${SPRING_PROFILES_ACTIVE}
 ENV SPRING_PORT ${SPRING_PORT}
@@ -51,7 +50,10 @@ ENV SKIP_POLICYSERVICE ${SKIP_POLICYSERVICE}
 ENV POLICYSERVICE_HOSTNAME ${POLICYSERVICE_HOSTNAME}
 ENV POLICYSERVICE_PORT ${POLICYSERVICE_PORT}
 
-COPY --from=build  /workspace/app/odm-platform-pp-services/product-plane-services/registry-server/target/odm-platform-pp-*.jar /app/
+COPY --from=build /workspace/app/odm-platform-pp-services/platform-core/dpds/target/odm-platform-core-dpds-*.jar /app/
+COPY --from=build /workspace/app/odm-platform-pp-services/product-plane-services/registry-api/target/odm-platform-pp-registry-api-*.jar /app/
+COPY --from=build /workspace/app/odm-platform-pp-services/utility-plane-services/notification-api/target/odm-platform-up-notification-api-*.jar /app/
+COPY --from=build  /workspace/app/odm-platform-pp-services/product-plane-services/registry-server/target/odm-platform-pp-registry-server-*.jar /app/
 
 RUN ln -s -f /usr/share/zoneinfo/Europe/Rome /etc/localtime
 
