--- a/odm-platform-up-services-policy-opa/Dockerfile
+++ b/odm-platform-up-services-policy-opa/Dockerfile
@@ -3,13 +3,22 @@ FROM maven:3-openjdk-11-slim as build
 
 WORKDIR /workspace/app
 
+# Clone Platform project and build it (the client module is a dependency for this project)
 RUN apt-get update
 RUN apt-get -y install git
+RUN git clone https://github.com/opendatamesh-initiative/odm-platform-pp-services.git
+
+WORKDIR /workspace/app/odm-platform-pp-services
+
+RUN mvn clean install -DskipTests
+
+WORKDIR /workspace/app
+
 RUN git clone https://github.com/opendatamesh-initiative/odm-platform-up-services-policy-opa.git
 
 WORKDIR /workspace/app/odm-platform-up-services-policy-opa
 
-RUN mvn clean install -DskipTests
+RUN mvn clean package spring-boot:repackage -DskipTests
 
 # Stage 2
 FROM openjdk:11-jre-slim
@@ -19,8 +28,8 @@ ARG JAVA_OPTS
 ARG DATABASE_URL
 ARG DATABASE_USERNAME
 ARG DATABASE_PASSWORD
-ARG FLYWAY_SCHEMA=flyway
-ARG FLYWAY_SCRIPTS_DIR=postgres
+ARG FLYWAY_SCHEMA=ODMPOLICY
+ARG FLYWAY_SCRIPTS_DIR=postgresql
 ARG OPA_HOSTNAME
 ARG OPA_PORT
 ARG SPRING_PORT=4242
@@ -36,10 +45,11 @@ ENV OPA_HOSTNAME ${OPA_HOSTNAME}
 ENV OPA_LOCAL_PORT ${OPA_PORT}
 ENV SPRING_LOCAL_PORT ${SPRING_PORT}
 
-COPY --from=build  /workspace/app/odm-platform-up-services-policy-opa/target/policyservice-opa-*.jar /app/
+COPY --from=build  /workspace/app/odm-platform-up-services-policy-opa/opa-client/target/odm-platform-up-policy-opa-client-*.jar /app/
+COPY --from=build  /workspace/app/odm-platform-up-services-policy-opa/opa-policy-server/target/odm-platform-up-policy-opa-server-*.jar /app/
 
 RUN ln -s -f /usr/share/zoneinfo/Europe/Rome /etc/localtime
 
-CMD java $JAVA_OPTS -jar /app/policyservice-opa-*.jar --spring.profiles.active=$SPRING_PROFILES_ACTIVE
+CMD java $JAVA_OPTS -jar /app/odm-platform-up-policy-opa-server-*.jar --spring.profiles.active=$SPRING_PROFILES_ACTIVE
 
 EXPOSE $SPRING_PORT
