--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,7 +71,7 @@ services:
         DATABASE_URL: "jdbc:postgresql://PostgreSQL:${DATABASE_PORT}/${DATABASE_NAME}"
         DATABASE_USERNAME: "${DATABASE_USERNAME}"
         DATABASE_PASSWORD: "${DATABASE_PASSWORD}"
-        FLYWAY_SCHEMA: "ODMNOTIFICATION"
+        DATABASE_SCHEMA: "ODMNOTIFICATION"
         FLYWAY_SCRIPTS_DIR: "postgresql"
         BLINDATA_URL: "${BLINDATA_URL}"
         BLINDATA_USER: "${BLINDATA_USER}"
