externalize in env file skip services properties

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -99,10 +99,10 @@ services:
         DATABASE_PASSWORD: "${DATABASE_PASSWORD}"
         FLYWAY_SCHEMA: "ODMREGISTRY"
         FLYWAY_SCRIPTS_DIR: "postgresql"
-        SKIP_METASERVICE: "false"
+        SKIP_METASERVICE: "${SKIP_METASERVICE}"
         METASERVICE_HOSTNAME: "metaservice"
         METASERVICE_PORT: "${METASERVICE_SPRING_PORT}"
-        SKIP_POLICYSERVICE: "false"
+        SKIP_POLICYSERVICE: "${SKIP_POLICYSERVICE}"
         POLICYSERVICE_HOSTNAME: "policyservice"
         POLICYSERVICE_PORT: "${POLICYSERVICE_SPRING_PORT}"
     env_file: .env
